--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -325,7 +325,7 @@ jobs:
         command: |
             export BACKEND_IP=$(aws ec2 describe-instances \
             --query 'Reservations[*].Instances[*].PublicIpAddress' \
-            --filters Name=tag:aws:cloudformation:stack-name,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7} \
+            --filters Name=tag:aws:cloudformation:stack-name,Values=udapipo-backend-${CIRCLE_WORKFLOW_ID:0:7} \
             --output text)
             export API_URL="http://${BACKEND_IP}:3030"
             echo $API_URL
@@ -375,7 +375,7 @@ jobs:
             --template-file .circleci/files/cloudfront.yml \
             --stack-name InitialStack \
             --parameter-overrides WorkflowID=${CIRCLE_WORKFLOW_ID:0:7} \
-            --tags project=udapeople
+            --tags project=udapipo
             echo OldWorkflowID: "${OldWorkflowID}"
             echo Current WorkflowID: "${CIRCLE_WORKFLOW_ID:0:7}"
       - persist_to_workspace:
@@ -387,6 +387,35 @@ jobs:
       - revert-migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
     
+  cleanup:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+            name: install tar and gzip
+            command: |
+              yum install -y tar gzip
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Get old stack workflow id
+          command: |
+            export OldWorkflowID=$(cat ~/OldWorkflowID.txt )
+            echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
+            export STACKS=$(aws cloudformation list-stacks \
+            --query "StackSummaries[*].StackName" \
+            --stack-status-filter CREATE_COMPLETE --no-paginate --output text)
+            echo Stack names: "${STACKS[@]}"
+            if [[ "${CIRCLE_WORKFLOW_ID:0:7}" != "${OldWorkflowID}" ]]
+            then
+              echo "..................cleaning stacks"..........................
+              aws s3 rm "s3://udapipo-${OldWorkflowID}" --recursive
+              aws cloudformation delete-stack --stack-name "udapipo-backend-${OldWorkflowID}"
+              aws cloudformation delete-stack --stack-name "udapipo-frontend-${OldWorkflowID}"
+            else
+              echo "Error: Cannot cleanup stack"
+            fi
 
 
 
@@ -416,6 +445,8 @@ workflows:
         - smoke-test:
             requires: [deploy-frontend, deploy-backend]
         - cloudfront-update:
-            requires: [smoke-test]
+            requires: [smoke-test] 
+        - cleanup:
+            requires: [cloudfront-update]
          
         
